--- a/DEPLOY/css/main.css
+++ b/DEPLOY/css/main.css
@@ -31,7 +31,7 @@ body {
 	transform: translate(50%,-50%);
 	background: #eee;
 	border-radius: 25px;
-	max-width: 90%;
+	max-width: 80vw;
 	max-height: 60vh;
 	box-sizing: border-box;
 	padding: 20px 30px;
